2008-09-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Made Cookie immutable.
	* src/Cookie.cc
	* src/Cookie.h
	* src/CookieParser.cc
	* src/CookieParser.h
	* src/CookieStorage.cc
	* test/CookieParserTest.cc
	* test/CookieStorageTest.cc
	* test/NsCookieParserTest.cc
	* test/Sqlite3MozCookieParserTest.cc
	
2008-09-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Removed CookieBox, CookieBoxFactory.
	* src/CookieBox.cc
	* src/CookieBox.h
	* src/CookieBoxFactory.cc
	* src/CookieBoxFactory.h
	* src/Makefile.am

2008-09-01  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Use CookieStorage class instead of CookieBox class.
	Now CookieStorage accepts cookies from numeric host such as 192.168.1.1.
	* src/AbstractProxyRequestCommand.cc
	* src/CookieStorage.cc
	* src/DownloadEngine.cc
	* src/DownloadEngine.h
	* src/HttpConnection.cc
	* src/HttpConnection.h
	* src/HttpRequest.cc
	* src/HttpRequest.h
	* src/HttpRequestCommand.cc
	* src/HttpResponse.cc
	* src/HttpResponseCommand.cc
	* src/HttpSkipResponseCommand.cc
	* src/Makefile.am
	* src/MultiUrlRequestInfo.cc
	* src/Request.cc
	* src/Request.h
	* src/main.cc
	* test/AllTest.cc
	* test/CookieStorageTest.cc
	* test/CookieTest.cc
	* test/HttpRequestTest.cc
	* test/HttpResponseTest.cc
	* test/Makefile.am
	* test/NsCookieParserTest.cc
	* test/Sqlite3MozCookieParserTest.cc
	* test/nscookietest.txt

2008-08-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Updated
	* test/Cookies.sqlite
	* test/nscookietest.txt

2008-08-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added tests for CookieStorage::load()
	* test/CookieStorageTest.cc

2008-08-28  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>

	Added CookieStorage class which is based on RFC2109 and manages cookies
	more strictly than CookieBox and CookieBoxFactory class.
	* src/CookieStorage.cc
	* src/CookieStorage.h
	* src/Cookie.cc
	* src/Cookie.h
	* test/CookieStorageTest.cc
	* test/CookieTest.cc
